--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="header">
 				<div class="headerWrap">
 					<img src="./img/Index/logo.png">
-					<span>植物园</span>
+					<span>梦然所</span>
 					<ul>
 						<li><a href="./index.html">首页</a></li>
 						<li><a href="./page/People.html">人员</a></li>
